Fix variation properties in MP API Do not save variation properties if it not override inherited values (only save when override) Fix Seo id bug
Former-commit-id: a9b3090c40a9f72f8925f62b1cbfd85a1f9fbab2

--- a/.gitignore
+++ b/.gitignore
@@ -191,3 +191,4 @@ Shared/VirtoCommerce/VirtoCommerce.PaymentGateways.dll
 /STOREFRONT/Website/App_Data/Pages
 /PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Test/products.csv
 /PLATFORM/Modules/Marketing/VirtoCommerce.MarketingModule.Data/app.config
+/STOREFRONT/Website/App_Data/Themes
