saving testing data of notification, added more info for description notification params, changes in notifactions
Former-commit-id: 79aa03114d235ccc23f38a3a9baaf669727f5477

--- a/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Notification\INotifier.cs" />
     <Compile Include="Notification\ISmsNotificationSendingGateway.cs" />
     <Compile Include="Notification\Notification.cs" />
+    <Compile Include="Notification\NotificationParameter.cs" />
     <Compile Include="Notification\NotificationTemplate.cs" />
     <Compile Include="Notification\NotifyEvent.cs" />
     <Compile Include="Notification\NotifySearchCriteria.cs" />
