- UPD. Updates to tax calculation module. Added tax type to products sent to AvaTax. changed to json request and more.
Former-commit-id: 7f693379bfa29747f1a8a27cd0a9bcf8faa967de

--- a/PLATFORM/Modules/Tax/AvaTax.TaxModule.Web/AvaTax.TaxModule.Web.csproj
+++ b/PLATFORM/Modules/Tax/AvaTax.TaxModule.Web/AvaTax.TaxModule.Web.csproj
@@ -114,6 +114,7 @@
     <Compile Include="AvaTaxClasses\TaxDetail.cs" />
     <Compile Include="AvaTaxClasses\TaxLine.cs" />
     <Compile Include="AvaTaxClasses\TaxOverrideDef.cs" />
+    <Compile Include="AvaTaxClasses\JsonTaxSvc.cs" />
     <Compile Include="AvaTaxClasses\TaxSvc.cs" />
     <Compile Include="AvaTaxClasses\ValidateResult.cs" />
     <Compile Include="Controller\AvaTaxController.cs" />
