--- a/PLATFORM/Modules/Merchant/GoogleShopping.Merchant.Web/GoogleShopping.MerchantModule.Web.csproj
+++ b/PLATFORM/Modules/Merchant/GoogleShopping.Merchant.Web/GoogleShopping.MerchantModule.Web.csproj
@@ -161,7 +161,7 @@
     <Compile Include="Helpers\Implementations\ExpiredDateTimeProvider.cs" />
     <Compile Include="Helpers\Implementations\DefaultDateTimeProvider.cs" />
     <Compile Include="Helpers\Interfaces\IDateTimeProvider.cs" />
-    <Compile Include="Managers\ShoppingManagerImpl.cs" />
+    <Compile Include="Services\ShoppingManagerSettings.cs" />
     <Compile Include="Model\Notifications\ProductSyncNotifyEvent.cs" />
     <Compile Include="Model\ProductsSyncJob.cs" />
     <Compile Include="Model\ProductStatus.cs" />
@@ -174,7 +174,7 @@
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\VCGoogleProductProvider.cs" />
-    <Compile Include="Services\IShopping.cs" />
+    <Compile Include="Services\IShoppingSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\VirtoCommerce.Platform.Core\VirtoCommerce.Platform.Core.csproj">
