notification journal start
Former-commit-id: b481696d1c92653ee5c1d77bf3af0f44952f1b8d

--- a/PLATFORM/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Web/VirtoCommerce.Platform.Web.csproj
@@ -317,6 +317,8 @@
     <Content Include="Scripts\angular-gridster.js" />
     <Content Include="Scripts\app\newnotifications\blades\notifications-edit-template.js" />
     <Content Include="Scripts\app\newnotifications\blades\notifications-edit-template.tpl.html" />
+    <Content Include="Scripts\app\newnotifications\blades\notifications-journal.js" />
+    <Content Include="Scripts\app\newnotifications\blades\notifications-journal.tpl.html" />
     <Content Include="Scripts\app\newnotifications\blades\notifications-list.tpl.html" />
     <Content Include="Scripts\app\newnotifications\blades\notifications-list.js" />
     <Content Include="Scripts\app\newnotifications\blades\notifications-menu.js" />
