--- a/PLATFORM/Modules/Core/VirtoCommerce.Domain/VirtoCommerce.Domain.csproj
+++ b/PLATFORM/Modules/Core/VirtoCommerce.Domain/VirtoCommerce.Domain.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Cart\Model\ShoppingCart.cs" />
     <Compile Include="Cart\Services\IShoppingCartSearchService.cs" />
     <Compile Include="Cart\Services\IShoppingCartService.cs" />
+    <Compile Include="Catalog\Model\Asset.cs" />
     <Compile Include="Catalog\Model\AvailabilityRule.cs" />
     <Compile Include="Catalog\Model\Catalog.cs" />
     <Compile Include="Catalog\Model\CatalogLanguage.cs" />
@@ -75,8 +76,7 @@
     <Compile Include="Commerce\Model\ILanguageSupport.cs" />
     <Compile Include="Catalog\Model\ILinkSupport.cs" />
     <Compile Include="Commerce\Model\ISeoSupport.cs" />
-    <Compile Include="Catalog\Model\ItemAsset.cs" />
-    <Compile Include="Catalog\Model\ItemAssetType.cs" />
+    <Compile Include="Catalog\Model\Image.cs" />
     <Compile Include="Catalog\Model\ItemResponseGroup.cs" />
     <Compile Include="Catalog\Model\ProductAssociation.cs" />
     <Compile Include="Catalog\Model\Property.cs" />
