--- a/PLATFORM/VirtoCommerce.Platform.Web/packages.config
+++ b/PLATFORM/VirtoCommerce.Platform.Web/packages.config
@@ -6,6 +6,9 @@
   <package id="angular-ui-grid" version="3.0.0" targetFramework="net451" />
   <package id="Angular-UI-Router" version="0.2.8.0" targetFramework="net451" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
+  <package id="Common.Logging" version="3.1.0" targetFramework="net451" />
+  <package id="Common.Logging.Core" version="3.1.0" targetFramework="net451" />
+  <package id="Common.Logging.NLog32" version="3.1.0" targetFramework="net451" />
   <package id="CommonServiceLocator" version="1.2" targetFramework="net451" />
   <package id="DotLiquid" version="1.8.0" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
@@ -46,6 +49,7 @@
   <package id="Modernizr" version="2.7.2" targetFramework="net451" />
   <package id="Moment.js" version="2.8.2" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
+  <package id="NLog" version="3.2.0.0" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="selectize" version="0.9.0" targetFramework="net451" />
   <package id="Sendgrid" version="6.1.0" targetFramework="net451" />
