notifications (add to store widget, language/object api/ui/backend/migration/index ready), content (pages service registration)
Former-commit-id: e207135133040d5957b11703793ffd1fa5f09b40

--- a/PLATFORM/VirtoCommerce.Platform.Data/VirtoCommerce.Platform.Data.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Data/VirtoCommerce.Platform.Data.csproj
@@ -221,6 +221,10 @@
     <Compile Include="Repositories\Migrations\201506301244090_NotificationAddLanguagesAndObjectType.Designer.cs">
       <DependentUpon>201506301244090_NotificationAddLanguagesAndObjectType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Repositories\Migrations\201507011404374_AddUniqueIndexForNotificationTemplate.cs" />
+    <Compile Include="Repositories\Migrations\201507011404374_AddUniqueIndexForNotificationTemplate.Designer.cs">
+      <DependentUpon>201507011404374_AddUniqueIndexForNotificationTemplate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Repositories\Migrations\Configuration.cs" />
     <Compile Include="Repositories\PlatformDatabaseInitializer.cs" />
     <Compile Include="Repositories\PlatformRepository.cs" />
@@ -290,6 +294,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Repositories\Migrations\201506301244090_NotificationAddLanguagesAndObjectType.resx">
       <DependentUpon>201506301244090_NotificationAddLanguagesAndObjectType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Repositories\Migrations\201507011404374_AddUniqueIndexForNotificationTemplate.resx">
+      <DependentUpon>201507011404374_AddUniqueIndexForNotificationTemplate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Security\Identity\Migrations\201411101625303_InitialCreate.resx">
       <DependentUpon>201411101625303_InitialCreate.cs</DependentUpon>
