--- a/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/VirtoCommerce.StoreModule.Web.csproj
+++ b/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/VirtoCommerce.StoreModule.Web.csproj
@@ -150,6 +150,8 @@
     <Content Include="Scripts\widgets\seoWidget.tpl.html" />
     <Content Include="Scripts\widgets\storeCurrenciesWidget.js" />
     <Content Include="Scripts\widgets\storeCurrenciesWidget.tpl.html" />
+    <Content Include="Scripts\widgets\storeNotificationWidget.js" />
+    <Content Include="Scripts\widgets\storeNotificationWidget.tpl.html" />
     <Content Include="Scripts\widgets\storePaymentsWidget.js" />
     <Content Include="Scripts\widgets\storeSettingsWidget.js" />
     <Content Include="Scripts\widgets\storeAdvancedWidget.js" />
