--- a/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Data/VirtoCommerce.StoreModule.Data.csproj
+++ b/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Data/VirtoCommerce.StoreModule.Data.csproj
@@ -77,6 +77,10 @@
     <Compile Include="Migrations\201506151332388_StoreReferencesCascadeDelete.Designer.cs">
       <DependentUpon>201506151332388_StoreReferencesCascadeDelete.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201507021246252_TaxTypeToStoreShippingMethod.cs" />
+    <Compile Include="Migrations\201507021246252_TaxTypeToStoreShippingMethod.Designer.cs">
+      <DependentUpon>201507021246252_TaxTypeToStoreShippingMethod.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\Store.cs" />
     <Compile Include="Model\StoreCurrency.cs" />
@@ -122,6 +126,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201506151332388_StoreReferencesCascadeDelete.resx">
       <DependentUpon>201506151332388_StoreReferencesCascadeDelete.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201507021246252_TaxTypeToStoreShippingMethod.resx">
+      <DependentUpon>201507021246252_TaxTypeToStoreShippingMethod.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
