--- a/.gitignore
+++ b/.gitignore
@@ -191,3 +191,4 @@ Shared/VirtoCommerce/VirtoCommerce.PaymentGateways.dll
 /STOREFRONT/Website/App_Data/Themes/SampleStore/Default
 /STOREFRONT/Website/App_Data/Themes/AppleStore/Default
 /STOREFRONT/Website/App_Data/Pages
+/STOREFRONT/Website/App_Data/Themes
