--- a/PLATFORM/Modules/Merchandising/VirtoCommerce.MerchandisingModule.Web/VirtoCommerce.MerchandisingModule.Web.csproj
+++ b/PLATFORM/Modules/Merchandising/VirtoCommerce.MerchandisingModule.Web/VirtoCommerce.MerchandisingModule.Web.csproj
@@ -113,12 +113,14 @@
     <Compile Include="Converters\PromotionConverter.cs" />
     <Compile Include="Converters\PromotionRewardConverter.cs" />
     <Compile Include="Converters\ResponseGroupConverter.cs" />
+    <Compile Include="Converters\InventoryConverter.cs" />
     <Compile Include="Converters\SeoInfoConverter.cs" />
     <Compile Include="Converters\StoreConverter.cs" />
     <Compile Include="Extensions\ItemServiceExtensions.cs" />
     <Compile Include="Model\Asset.cs" />
     <Compile Include="Model\DynamicContentItemGroup.cs" />
     <Compile Include="Model\Image.cs" />
+    <Compile Include="Model\Inventory.cs" />
     <Compile Include="Model\Price.cs" />
     <Compile Include="Model\Association.cs" />
     <Compile Include="Model\CategoryInfo.cs" />
