--- a/PLATFORM/Modules/Tax/AvaTax.TaxModule.Web/AvaTax.TaxModule.Web.csproj
+++ b/PLATFORM/Modules/Tax/AvaTax.TaxModule.Web/AvaTax.TaxModule.Web.csproj
@@ -54,6 +54,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="System.Data.Services.Client" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -122,6 +123,7 @@
     <Compile Include="Converters\CustomerOrderCancelConverter.cs" />
     <Compile Include="Converters\ShoppingCartConverter.cs" />
     <Compile Include="Converters\CustomerOrderConverter.cs" />
+    <Compile Include="Observers\CancelOrderTaxesObserver.cs" />
     <Compile Include="Services\AvaTaxSettings.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Observers\CalculateCartTaxesObserver.cs" />
