--- a/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Core/VirtoCommerce.Platform.Core.csproj
@@ -82,6 +82,10 @@
     <Compile Include="Asset\IBlobUrlResolver.cs" />
     <Compile Include="Asset\IBlobStorageProvider.cs" />
     <Compile Include="Asset\UploadStreamInfo.cs" />
+    <Compile Include="Common\SerializationExtension.cs" />
+    <Compile Include="ImportExport\ExportImportProgressInfo.cs" />
+    <Compile Include="ImportExport\IPlatformExportImportManager.cs" />
+    <Compile Include="ImportExport\ISupportExportModule.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Caching\CacheGroups.cs" />
     <Compile Include="Caching\Cachekey.cs" />
@@ -125,6 +129,7 @@
     <Compile Include="Common\TrackingEntry.cs" />
     <Compile Include="Common\TreeExtension.cs" />
     <Compile Include="Common\ValueObject.cs" />
+    <Compile Include="ImportExport\ISupportImportModule.cs" />
     <Compile Include="Modularity\ManifestDependency.cs" />
     <Compile Include="Modularity\ModuleBase.cs" />
     <Compile Include="Modularity\AssemblyResolver.cs" />
