Support for renaming properties. Simplified the model. Refactoring.
Former-commit-id: 32deaae8e275488c4d2f4ec14ec184eae7f33ccb

--- a/PLATFORM/VirtoCommerce.Platform.Data/VirtoCommerce.Platform.Data.csproj
+++ b/PLATFORM/VirtoCommerce.Platform.Data/VirtoCommerce.Platform.Data.csproj
@@ -239,9 +239,9 @@
     <Compile Include="Repositories\Migrations\201507061326367_RenameNotificationTemplateIndex.Designer.cs">
       <DependentUpon>201507061326367_RenameNotificationTemplateIndex.cs</DependentUpon>
     </Compile>
-    <Compile Include="Repositories\Migrations\201507061651371_DynamicProperties.cs" />
-    <Compile Include="Repositories\Migrations\201507061651371_DynamicProperties.Designer.cs">
-      <DependentUpon>201507061651371_DynamicProperties.cs</DependentUpon>
+    <Compile Include="Repositories\Migrations\201507071605101_DynamicProperties.cs" />
+    <Compile Include="Repositories\Migrations\201507071605101_DynamicProperties.Designer.cs">
+      <DependentUpon>201507071605101_DynamicProperties.cs</DependentUpon>
     </Compile>
     <Compile Include="Repositories\Migrations\Configuration.cs" />
     <Compile Include="Repositories\PlatformDatabaseInitializer.cs" />
@@ -318,6 +318,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Repositories\Migrations\201507061326367_RenameNotificationTemplateIndex.resx">
       <DependentUpon>201507061326367_RenameNotificationTemplateIndex.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Repositories\Migrations\201507071605101_DynamicProperties.resx">
+      <DependentUpon>201507071605101_DynamicProperties.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Security\Identity\Migrations\201411101625303_InitialCreate.resx">
       <DependentUpon>201411101625303_InitialCreate.cs</DependentUpon>
